fdo#58040: sw: fine tune async word count

- count characters instead of paragraphs to better account for large or
  small paragraphs
- start out with a relatively small value (5k chars) on the first run to
  quickly show something to the user

Change-Id: Ic4013545692f267aab39e084415d5d794bb5a4ca