sw/inc/doc.hxx
@@ -2080,13 +2080,12 @@ private:
     void CopyMasterFooter(const SwPageDesc &rChged, const SwFmtFooter &rFoot, SwPageDesc *pDesc, bool bLeft);
 
     /** continue computing a chunk of document statistics
-      * \param nTextNodes number of paragraphs to calculate before
-      * exiting
+      * \param nChars  number of characters to count before exiting
       * \param bFields if stat. fields should be updated
       *
       * returns false when there is no more to calculate
       */
-    bool IncrementalDocStatCalculate(long nTextNodes = 250, bool bFields = true);
+    bool IncrementalDocStatCalculate(long nChars, bool bFields = true);
 
     /// Our own 'StatsUpdateTimer' calls the following method
     DECL_LINK( DoIdleStatsUpdate, Timer * );
